# owntransfer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  babel.cfg  docker-compose.postgres.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_rename_color_scheme.py
app/: database.py  limiter.py  logging_config.py  main.py  templating.py
app/auth/: deps.py  download_grants.py  exceptions.py  login_redirect.py  passwords.py  sessions.py  totp.py  unlock_cookies.py  users.py
app/config/: env_files.py  oauth_providers.py  settings.py
app/http/: __init__.py  client_ip.py  csrf.py  external_url.py  proxy_warnings.py  safe_redirect.py  uploads.py
app/i18n/: __init__.py
app/locales/: messages.pot
app/middleware/: locale.py  public_scheme.py  security_headers.py  setup.py
app/models/: __init__.py  app_settings.py  audit.py  base.py  download_log.py  file_request.py  transfer.py  user.py
app/routers/: admin.py  auth.py  branding.py  dashboard.py  locale.py  profile.py  (+4 more)
scripts/: fill_de_translations.py  fill_es_translations.py
tests/: conftest.py  test_admin_settings.py  test_app.py  test_branding.py  test_datetime_display.py  test_download_limits.py  test_email_templates.py  test_env_files.py  test_external_url.py  test_i18n.py  test_oauth_user.py  test_proxy_warnings.py  test_security_hardening.py  test_security_headers.py  test_setup.py  test_share_list.py  test_share_status.py  test_zip_stream.py
(+63 files in other folders)
