[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owntransfer"
version = "0.1.0"
description = "OwnTransfer — WeTransfer-like file sharing service (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "authlib>=1.3.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.2.0",
    "aiosmtplib>=3.0.1",
    "apscheduler>=3.10.4",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
    "aiofiles>=24.1.0",
    "markdown>=3.6.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

